# kmerr

./: .gitignore  Cargo.toml  README.md  perf.data.old
benches/: benchmarks.rs
src/: kmer_utils.rs  lib.rs  main.rs  utils.rs
src/consecutive/: kmer.rs
src/minimizer/: context_free.rs  mod.rs  universal_minimizer.rs
src/syncmer/: closed_syncmer.rs  mod.rs
