cargo-features = ["profile-rustflags"]

[features]
benchmarking = []

[package]
name = "kmerrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
kmers = "0.2.2"


[profile.release]
opt-level = 3              # Use best optimizations
overflow-checks = false     # Disable integer overflow checks.
rustflags = ["-C", "target-feature=+avx,+sse3,+avx2,+fma"]

